client/src/index.css
@tailwind base;
@tailwind components;
@tailwind utilities;

:root {
  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
  line-height: 1.5;
  font-weight: 400;

  color-scheme: light dark;
  color: rgba(255, 255, 255, 0.87);
  background-color: #242424;

  font-synthesis: none;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;

  --bg-primary: #F5F7F8;
  --bg-secondary: #EEEEEE;
  --accent: #FFFFFF;
  --highlight: #508C9B;
  --text-highlight: #FFFFFF;
  --text-secondary: #373A40;
  --text-primary: #686D76;

  --error: #D2042D;
  --success: #3CB371;
}

body {
  display: flex;
  justify-content: center;
  width: 100%;
  min-height: 100vh;
  max-height: fit-content;
  margin: 0;
  padding: 1rem;
  background-color: var(--bg-secondary);
}


#root {
  display: flex;
  flex: 1;
  flex-direction: column;
  max-width: 1500px;
  width: 100%;
  gap: 1rem;
}

.progress-bar {
  width: 100%;
  height: 10px;
  -webkit-appearance: none;
  appearance: none;
}

.progress-bar::-webkit-progress-bar {
  background-color: var(--bg-secondary);
  border-radius: 5px;
}

.progress-bar::-webkit-progress-value {
  background-color: var(--highlight);
  border-radius: 5px;
  transition: width 0.5s;
}

.password-strength::-moz-progress-bar {
  background-color: var(--highlight);
  border-radius: 5px;
  transition: width 0.5s;
}

.swiper-slide {
  width: auto;
}

